# shred_s4_benchmark

./: .gitignore  README.md  pyproject.toml
shred_s4_benchmark/: s4_vs_SHRED.py  setup_external.py
shred_s4_benchmark/models/: mamba_model.py  s4_model.py
shred_s4_benchmark/utils/: external.py
